# Valyou

./: Cargo.toml  README.md  diesel.toml  valyou.yml
migrations/00000000000001_id_function/: up.sql
migrations/00000000000010_functions/: up.sql
migrations/00000000000010_id_function/: down.sql  up.sql
migrations/00000000000020_accounts/: down.sql  up.sql
migrations/00000000000030_profiles/: down.sql  up.sql
migrations/00000000000040_new_user/: down.sql  up.sql
migrations/00000000000050_relations/: down.sql  up.sql
migrations/00000000000060_journals/: down.sql  up.sql
migrations/00000000000070_entries/: down.sql  up.sql
migrations/00000000000080_entries_author_owns_journal/: down.sql  up.sql
migrations/00000000000080_feed/: down.sql  up.sql
migrations/00000000000090_edit_entry_trigger/: down.sql  up.sql
migrations/2019-12-01-215318_accounts/: up.sql
migrations/2019-12-01-215318_create_users/: up.sql
migrations/2019-12-03-214544_profiles/: down.sql  up.sql
migrations/2019-12-03-214551_relations/: down.sql  up.sql
migrations/2019-12-03-214559_journals/: up.sql
migrations/2019-12-03-214604_entries/: down.sql  up.sql
migrations/2019-12-03-214620_feedback/: down.sql  up.sql
src/: auth.rs  errors.rs  main.rs  models.rs  schema.rs
src/models/: entries.rs  mod.rs  pagination.rs  profiles.rs  search.rs  status.rs  visibility.rs
src/routes/: account.rs  entries.rs  feed.rs  journals.rs  mod.rs  profiles.rs  relationships.rs
src/schema/: mod.rs
src/schemas/: views.rs
src/views/: mod.rs
