[package]
name = "valyou"
version = "0.1.0"
authors = ["Jozsef <jozsefaug@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0-alpha.1"
bcrypt = "0.6.1"
frostflake = "0.2.1"
frank_jwt = "3.1.2"
actix-identity = "0.2.0-alpha.1"
serde_derive = "1"
serde = "1"
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.7"