[package]
name = "valyou"
version = "0.1.0"
authors = ["Jozsef <jozsefaug@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0-alpha.3"
actix-rt = "1.0.0"
bcrypt = "0.6.1"
jsonwebtoken = "7.0.0-alpha.2"
actix-identity = "0.2.0-alpha.1"
serde_derive = "1.0.103"
serde = "1.0.103"
serde_json = "1.0.44"
diesel = { version = "1.4.3", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
r2d2 = "0.8.7"
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"